--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -853,3 +853,19 @@ margin-left: 4px;
 }
 .botton-footer button a {text-decoration: none;
 color: white;}
+/* chỉnh sửa button owl carousel*/
+.owl-carousel .owl-nav button.owl-next,.owl-carousel .owl-nav button.owl-prev,.owl-carousel button.owl-dot {
+    color: black;
+    font-size: 50px;
+    z-index: 999999;}
+
+.owl-carousel .owl-nav button.owl-next {
+    position: absolute;
+    top: 35%;
+    right: 10px;
+}
+.owl-carousel .owl-nav button.owl-prev {
+    position: absolute;
+    top: 35%;
+    left: 10px;
+}
