--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,7 +84,7 @@ background: #E3E3E3;}
 
 .header .menu {width: 1320px;
     display: flex;
-margin-top: 30px;
+margin-top: 28px;
 justify-content: space-between;
 align-items: center;}
 .header ul li {font-family: 'Open Sans', sans-serif;
@@ -110,7 +110,7 @@ z-index: 0;}
 .top-main .product .content {width: 686px;
 height: 364px;
 margin-top: 74px;
-padding-left: 4px;
+padding-left: 3px;
 z-index: 99999999;}
 .product .content p:nth-child(1) {
     color: black;
@@ -134,13 +134,13 @@ word-wrap: break-word;
 .product .image {margin-left: 98px;}
 .product .content button {width: auto;
     height: 72px;
-    padding: 19px 26px 19px 26px;
+    padding: 19px 26px 19px 27px;
     background-color: #1E2832;
     justify-content: center; 
     align-items: center;
      gap: 8px;
       display: inline-flex;
-      margin-top: 66px;
+      margin-top: 63px;
     border: 0px;}
 
 .product .content button span {
@@ -155,7 +155,7 @@ word-wrap: break-word;
 .product .content button i {
     color: white;
 font-size: 24px;
-font-family: Font Awesome 6 Free;
+font-family: Font Awesome 6 Brands;
 font-weight: 900;
 word-wrap: break-word
 }
@@ -374,7 +374,7 @@ margin-left: 4px;}
 .top-section button i {
     color: white;
 font-size: 14px;
-font-family: Font Awesome 6 Free;
+font-family: Font Awesome 6 Brands;
 font-weight: 900;
 word-wrap: break-word;}
 /* hover fillter */
@@ -392,8 +392,8 @@ word-wrap: break-word;}
     
     .product-colum {width: calc(100%/4);}
     
-    .product-content {width: 100%;
-    height: 478px;
+    .product-content {
+    height: auto;
     margin-bottom: 24px;
 }
 .product-content .product-image {
@@ -480,9 +480,10 @@ align-items: center;
 display: flex;}
 
 .row2-product{
-    height: 478px;
+   
+    height: auto;
     display: flex;
-    margin: 24px -12px 0 -12px;}
+    margin: 35px -12px 0 -12px;}
 
 .product-content .product-image .sale {width:52px;
 height: 24px;
@@ -789,14 +790,14 @@ line-height: 29px;
     font-weight: 600;
     text-transform: capitalize;
     word-wrap: break-word;
-    margin-bottom:22px ;
+    margin-bottom:19px ;
 }
 .footer ul {color: #1E2832;
     font-size: 14px;
     font-family: 'Open Sans', sans-serif;
     font-weight: 400;
     text-transform: capitalize;
-    line-height: 34px;}
+    line-height: 35px;}
 
 .footer ul li a {
     text-decoration: none;
@@ -846,7 +847,7 @@ word-wrap: break-word
 .botton-footer button i {
     color: white;
 font-size: 14px;
-font-family: Font Awesome 6 Free;
+font-family: Font Awesome 6 Brands;
 font-weight: 900;
 word-wrap: break-word;
 margin-left: 4px;
@@ -855,15 +856,27 @@ margin-left: 4px;
 color: white;}
 /* chỉnh sửa button owl carousel*/
 .owl-carousel .owl-nav button.owl-next,.owl-carousel .owl-nav button.owl-prev,.owl-carousel button.owl-dot {
-    color: black;
-    font-size: 50px;
+    color: rgba(140, 136, 136, 0.5);
+    font-size: 0px;/* xoá icon mũi tên mặc định*/
     z-index: 999999;}
 
 .owl-carousel .owl-nav button.owl-next {
     position: absolute;
-    top: 35%;
-    right: 10px;}
+    top: 33%;
+    right: 20px;}
 .owl-carousel .owl-nav button.owl-prev {
     position: absolute;
-    top: 35%;
-    left: 10px;}
+    top: 33%;
+    left: 20px;}
+    .owl-prev::before {
+        content: '\f104'; /* thay thế icon mũi tên bên trái */
+        font-family: 'Font Awesome 6 Free';
+        font-size: 40px;
+    }
+    
+    .owl-next::before {
+        content: '\f105'; /* thay thế icon mũi tên bên phải */
+        font-family: 'Font Awesome 6 Free';
+        font-size: 40px;
+    }
+    
